--- a/report/DetailedArchitecture.tex
+++ b/report/DetailedArchitecture.tex
@@ -208,7 +208,7 @@ Decoupling generated code from resources access
 \end{center}
 \end{table}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Java application Architectural Structure}
+\subsection{The Architectural of the Java Application}
 \label{sec:JavaArchitecStruct}
 Before starting the transformation, we should have a rough idea of the architecture that the Java generated application should comply with.
 As our transformation deals with a small subset of the whole BPEL language, the correspondent Java application architecture does not seem to need, yet now, a strictly defined model. This happens because we do not want to force an architectural style that might restrict future expansions of the BPEL elements' subset.
