--- a/report/MethodologicalApproach.tex
+++ b/report/MethodologicalApproach.tex
@@ -19,6 +19,7 @@ Once these steps have been accomplished, we focus on providing more details on h
 
 
 \subsection{The domain of the transformation} 
+\label{sec:TransfDomain}
 In our transformation we are dealing with BPEL, which is a DSL (Domain Specific Language), and Java, which is a multipurpose language. 
 Having to deal with a model produced with a DSL means that   we don't have to take care of the general constructs and ideas that are present in a generic language. The language is already skimmed to what is necessary to orchestrate business processes, nothing more.  %Most importantly, the fact the input model is produced in a DSL  
  
