--- a/report/ServiceOrientedComputing.tex
+++ b/report/ServiceOrientedComputing.tex
@@ -1,7 +1,8 @@
 %Service Oriented Computing
 \section{Service Oriented Computing}
 \label{ServiceOrientedComputing}
-%--- Brief overview on SOC and SOA
+This Section gives a brief overview of the Service Oriented domain and its components. We introduce in Section \ref{SOC&SOA} the paradigms to create service oriented infrastructures. Section \ref{WebServices} explains how services can be deployed using the web as media, namely, the Web Services. 
+Later in Section \ref{WFManagement} we talk about Workflow management, introducing the terms of Orchestration and Choreography. Right after we dig into the technologies we will be working on throughout the whole project; we overview both BPEL in Section \ref{BPEL} and the remote calls enabled version of Java, Java RMI in Section \ref{JavaRMI}.   
 
 \subsection{Services and composition, SOC and SOA}
 \label{SOC&SOA}
