--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -35,10 +35,12 @@ Our objective is then to show the feasibility of a semi-automated transformation
 % - Where future work might be leaded \nl
 
 
-
 %---Overview of the whole work---
-\subsection{Overview of the thesis}
-FIXME : To expand at the end
+\subsection{Overview of the thesis FIXME}
+Section \ref{ServiceOrientedComputing} introduces the Service Oriented domain and its components. It gives a brief overview of the paradigms to create service oriented infrastructures (\ref{SOC&SOA}) and the web service technology (\ref{WebServices}). Later in Subsection \ref{WFManagement} Orchestration and Choreography of services are addressed. Then, it focuses on the technologies we will be working on throughout the whole project: BPEL in \ref{BPEL} and Java RMI in \ref{JavaRMI}. \\
+Section \ref{ModelDrivenEngineering} introduces Model Driven Engineering (MDE) and its methodologies. At first (Subsection \ref{MDA}) we have a look of where the Model Driven Architecture (MDA) fits in the MDE picture, then we dig into the possible MDA methods, namely: Model-to-Model and Model-to-Text, both in \ref{m2m&m2t}. Plus, in the same Subsection, we have a general look at meta-modeling (\ref{Meta-modeling}) and to the Eclipse Modeling Framework (\ref{EMF}). To conclude, we have a deep look into the Acceleo code generator technology (\ref{acceleo}), how it works (\ref{AcceleoParametirazion}) and its architecture (\ref{AcceleoArchitecture}). \\
+The decisional steps we made to choose our methodological approach to carry out the transformation are explained in Section \ref{MethodApproach}. First we overview the Domain of the transformation \ref{sec:TransfDomain}...
+FIXME: to complete after Stefano's corrections
 
 %  \item Proposed approach, MDE, MDA
 % \end{itemize}
