--- a/report/BPEL.tex
+++ b/report/BPEL.tex
@@ -44,7 +44,7 @@ BPEL processes need to communicate with each other and for this purpose they usu
 \begin{figure}
 \begin{center}
 \includegraphics[width=125mm]{pictures/image-BPEL.pdf}
-\caption{Execution of a simple BPEL Process}
+\caption{ Execution of a simple BPEL Process \textbf{FIXME(To Realize with UML Deployment Diagram)}}
 \label{BPELprocess}
 \end{center}
 \end{figure}
