--- a/report/MethodologicalApproach.tex
+++ b/report/MethodologicalApproach.tex
@@ -44,7 +44,7 @@ Moreover, Model-to-Text also has two variants: visitor or template based. As dis
 \subsection{Overview of the methodological approach}
 \label{MethodologyOverview}
 Once defined the methodology to be applied, we can sketch, as represented in Figure \ref{fig:TransformationApproach}, how the M2T technique is applied on our transformation.
-\begin{figure}[h]
+\begin{figure}[ht]
   \begin{center}
     \includegraphics[scale=0.9]{pictures/TransformationApproach.png}
     \caption{The methodological transformation approach}
