--- a/report/document.tex
+++ b/report/document.tex
@@ -124,6 +124,7 @@ commentstyle=\color{forestGreen}\ttfamily
 % no need to redefine the constructs list, they are already defined in lstListing
 \lstdefinestyle{javaStyle}{
 language=Java,
+alsolanguage=acceleo,
 %Formatting
 basicstyle=\footnotesize,
 sensitive=true,
