--- a/report/references.bib
+++ b/report/references.bib
@@ -1,6 +1,12 @@
 % References
 
-
+@Misc{ acceleoForum,
+	title = "Acceleo Official Forum",
+	author = "Acceleo Developers",
+	howpublished = "\url{http://stackoverflow.com/questions/tagged/acceleo}",
+	year = "2012",
+	note = "[Online; accessed 28-August-2012]"
+}
 
 @Misc{ wsimport,
 	title = "wsimport - Java API for XML Web Services (JAX-WS) 2.0",
